[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/MiscControlsHotkeyPanel/MiscControlsHotkeyPanel.gd" type="Script" id=1]
[ext_resource path="res://GameFrontHUDRelated/NonGameSubs/CurrentControlsPanel/Subs/CurrControlsSubPanel_SingleControl.tscn" type="PackedScene" id=2]

[node name="GUI_MiscControlsHotkeyPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 225.0
margin_bottom = 147.0
custom_constants/separation = 30

[node name="CCSP_SingleControl__ToggleHideHud" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 225.0
margin_bottom = 37.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 225.0
margin_bottom = 147.0
custom_constants/separation = 10

[node name="CCSP_SingleControl__ScreenShot" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 225.0
margin_bottom = 37.0

[node name="ScreenShotLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 225.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Screenshots are saved in:
%s"
align = 1
valign = 1
